# General-Manipulator-Kinematics

./: README.md  pyproject.toml
examples/: __main__.py  manipulator_3R_xy.py  pppsr_kinematics.py  pppsr_visualizer.py
examples/lib/: pppsr.py
src/general_manipulator_kinematics/: general_kinematics.py  manipulator_visualizer.py
src/general_manipulator_kinematics/manipulator_visualizer/: __core.py  __init__.py  __manipulator_visualizer_mpl.py  __manipulator_visualizer_pqg.py
src/general_manipulator_kinematics/torus_visualization/: __init__.py  __so2_2_torus.py  __so2_3_torus.py  so2_2_torus.py  so2_3_torus.py
